--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/node": "^20.14.8",
     "typescript": "^5.5.2",
     "vite-tsconfig-paths": "^4.3.2",
